Fix read more button on mobile display

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -507,16 +507,19 @@ small {
     display: none; }
     @media only screen and (max-width: 37.5em) {
       .post-card__read-more {
-        display: block;
-        font-size: 1.6rem;
-        text-align: right;
-        background-color: #FFBF33;
-        color: #292C34 !important;
-        padding: 1rem;
-        max-width: 30%;
-        margin-left: 80%;
-        font-family: "Oswald", sans-serif;
-        text-transform: uppercase; } }
+        display: flex;
+        justify-content: right;
+        margin-bottom: 2rem; } }
+    .post-card__read-more__button, .post-card__read-more__button:link, .post-card__read-more__button:visited {
+      font-size: 1.6rem;
+      flex: 0 1 25%;
+      margin: 0 0 0 auto;
+      background-color: #FFBF33;
+      color: #292C34;
+      padding: 1rem;
+      white-space: nowrap;
+      font-family: "Oswald", sans-serif;
+      text-transform: uppercase; }
 
 .header__menu {
   width: 100%; }
